--- a/src/frontend/styles.css
+++ b/src/frontend/styles.css
@@ -3,15 +3,15 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: 'NeonSpark';
-  src: url('/assets/fonts/NeonSpark.otf') format('opentype');
+  font-family: 'Acelon';
+  src: url('/assets/fonts/Acelon.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Acelon';
-  src: url('/assets/fonts/Acelon.otf') format('opentype');
+  font-family: 'Cafe';
+  src: url('/assets/fonts/Cafe.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -85,9 +85,9 @@ p {
   .button-simple{
     @apply
       rounded-lg
-      bg-blue-700 dark:bg-blue-700
-      focus:ring-2 focus:ring-blue-200 dark:focus:ring-blue-900 
-      hover:enabled:bg-blue-800 disabled:bg-gray-500 dark:disabled:bg-gray-700
+      bg-purple-700 dark:bg-purple-700
+      focus:ring-2 focus:ring-purple-200 dark:focus:ring-purple-900 
+      hover:enabled:bg-purple-800 disabled:bg-gray-500 dark:disabled:bg-gray-700
       text-white font-medium text-center text-xs whitespace-nowrap
       inline-flex py-2.5 px-3
   }
