--- a/src/frontend/styles.css
+++ b/src/frontend/styles.css
@@ -17,8 +17,8 @@
 }
 
 :root {
-  --shadow-color: #5be7dc; /* Light theme default */
-  --shadow-color-light: #5be7dc;
+  --shadow-color: rgb(7 227 68);
+  --shadow-color-light: rgb(7 227 68);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -51,7 +51,7 @@ p {
 }
 
 .neon-effect {
-  color: white;
+  color:white;
   animation: neon 3s infinite;
 }
 
@@ -94,10 +94,10 @@ p {
   .button-discrete{
     @apply
       rounded
-      bg-gray-600 dark:bg-gray-600
-      focus:ring-2 focus:ring-gray-200 dark:focus:ring-gray-800 
-      hover:enabled:bg-gray-700 disabled:bg-gray-500 dark:disabled:bg-gray-700
-      text-white font-medium text-center text-xs whitespace-nowrap
+      bg-slate-400 dark:bg-slate-600
+      focus:ring-2 focus:ring-slate-200 dark:focus:ring-slate-800 
+      dark:hover:enabled:bg-slate-700 hover:enabled:bg-slate-300 disabled:bg-slate-500 dark:disabled:bg-slate-700
+      font-medium text-center text-xs whitespace-nowrap
       inline-flex py-0.5 px-1
   }
 }
