--- a/src/frontend/styles.css
+++ b/src/frontend/styles.css
@@ -89,8 +89,9 @@ p {
   }
   .button-discrete{
     @apply
-      rounded
-      bg-slate-400 dark:bg-slate-600
+      rounded-full
+      text-base
+      bg-transparent
       focus:ring-2 focus:ring-slate-200 dark:focus:ring-slate-800 
       dark:hover:enabled:bg-slate-700 hover:enabled:bg-slate-300 disabled:bg-slate-500 dark:disabled:bg-slate-700
       font-medium text-center text-xs whitespace-nowrap
