--- a/src/frontend/styles.css
+++ b/src/frontend/styles.css
@@ -114,3 +114,24 @@ p {
 .pulse-area-false svg path[data-testid="area.False"] {
   animation: pulse-fill 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
+
+.spinner-path {
+    stroke-dasharray: 90, 150;
+    stroke-dashoffset: 0;
+    animation: dash 2s ease-in-out infinite;
+  }
+
+  @keyframes dash {
+    0% {
+      stroke-dasharray: 1, 150;
+      stroke-dashoffset: 0;
+    }
+    50% {
+      stroke-dasharray: 90, 150;
+      stroke-dashoffset: -35;
+    }
+    100% {
+      stroke-dasharray: 90, 150;
+      stroke-dashoffset: -124;
+    }
+  }
