--- a/src/frontend/styles.css
+++ b/src/frontend/styles.css
@@ -75,7 +75,7 @@ p {
       rounded-lg
       bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br 
       focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 
-      disabled:bg-gray-500 dark:disabled:bg-gray-700 disabled:cursor-not-allowed
+      disabled:bg-gray-500 disabled:dark:bg-gray-700 disabled:bg-none disabled:hover:bg-none
       text-white font-medium text-sm text-center py-2.5 px-5
   }
   .button-simple{
@@ -83,16 +83,16 @@ p {
       rounded-lg
       bg-purple-700 dark:bg-purple-700
       focus:ring-2 focus:ring-purple-200 dark:focus:ring-purple-900 
-      hover:enabled:bg-purple-800 disabled:bg-gray-500 dark:disabled:bg-gray-700
-      text-white font-medium text-center text-xs whitespace-nowrap
-      inline-flex py-1.5 px-6
+      disabled:bg-gray-500 disabled:dark:bg-gray-700 disabled:bg-none
+      hover:enabled:bg-purple-800 text-white font-medium text-center 
+      text-xs whitespace-nowrap inline-flex py-1.5 px-6
   }
   .button-discrete{
     @apply
       rounded-full
       bg-transparent
       focus:ring-2 focus:ring-slate-200 dark:focus:ring-slate-800 
-      dark:hover:enabled:bg-slate-700 hover:enabled:bg-slate-300 disabled:bg-slate-500 dark:disabled:bg-slate-700
+      dark:hover:enabled:bg-slate-700 hover:enabled:bg-slate-300
       font-medium text-center text-xs whitespace-nowrap
       inline-flex py-0.5 px-1
   }
