--- a/src/frontend/styles.css
+++ b/src/frontend/styles.css
@@ -16,6 +16,13 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'Decoment';
+  src: url('/assets/fonts/DecomentRegular-2vLDd.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 /* Custom slider track and thumb styles */
 
 /* For WebKit browsers (Chrome, Edge, Safari) */
@@ -94,10 +101,10 @@ h1 {
   .button-simple{
     @apply
       rounded-lg
-      bg-purple-700 dark:bg-purple-700
-      focus:ring-2 focus:ring-purple-200 dark:focus:ring-purple-900 
+      bg-blue-500 dark:bg-blue-500
+      focus:ring-2 focus:ring-blue-200 dark:focus:ring-blue-900 
       disabled:bg-gray-500 disabled:dark:bg-gray-700 disabled:bg-none
-      hover:enabled:bg-purple-800 text-white font-medium text-center 
+      hover:enabled:bg-blue-800 text-white font-medium text-center 
       text-xs whitespace-nowrap inline-flex py-1.5 px-6
   }
   .button-discrete{
